# fortiforge

./: .gitignore  CONTRIBUTING.md  Dockerfile  INVENTORY.md  LICENSE  Makefile  PLAYBOOKS.md  PRODUCTION_GUIDE.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
fortiforge/: __init__.py  audit.py  cli.py  config.py  inventory.py  models.py  rbac.py  recommender.py
fortiforge/api/: server.py
fortiforge/executors/: __init__.py  cloud.py  local.py  ssh.py
fortiforge/pipeline/: intent_parser.py  planner.py  simulator.py
fortiforge/playbooks/: generator.py
fortiforge/rules_db/: __init__.py  search.py
fortiforge/rules_db/data/: database_summary.json
fortiforge/rules_db/data/cloud/aws/: sg_ssh_admin.yaml  sg_web_allow.yaml
fortiforge/rules_db/data/cloud/azure/: nsg_ssh_admin.yaml  nsg_web_allow.yaml
fortiforge/rules_db/data/compliance/cis/: auditd_enabled.yaml  kernel_module_blacklist.yaml  linux_ipv6.yaml  linux_permissions.yaml  ssh_root_login.yaml  ubuntu_password_policy.yaml
fortiforge/rules_db/data/firewall/iptables/: allow_dns.yaml  (+10 more)
fortiforge/rules_db/data/scenarios/: db_hardening.yaml  firewall_lockdown.yaml
fortiforge/ui/static/: style.css
fortiforge/ui/templates/: index.html
inventory/examples/: sandbox.yaml
playbooks/samples/: db_hardening.yaml  enable_fail2ban.yaml  firewall_sqli.yaml  harden_nginx.yaml  web_cluster.yaml
sandbox/: docker-compose.yml
scripts/: production_demo.sh
tests/fuzz/: test_parser_fuzz.py
tests/unit/: test_parser.py  test_planner.py  test_simulator.py
(+3626 files in other folders)
